fixed footer spacing, portfolio link

--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -4,6 +4,7 @@
     background-color:lightgray;
     margin-left:-15px;
     margin-right:-15px;
+    margin-top: 20px;
     border-top: #003152 solid 2px;
     font-size:16px;
 }
